--- a/recipes/Baked_Chicken_Thighs.html
+++ b/recipes/Baked_Chicken_Thighs.html
@@ -8,5 +8,34 @@
 </head>
 <body>
     <h1> Baked Chicken Thighs </h1>    
+
+    <img src="../images/chiken.jpg" alt="baked chicken picture">
+
+    <p>These easy baked chicken thighs require minimum preparation; I love this quick recipe because I'm a college student! Feel free to season the chicken with your favorite spices. I like to use cayenne powder and black pepper.</p>
+
+    <h2> Ingredients </h2>
+    <ul>
+        <li>4 chicken thighs</li>
+        <li>4 teaspoons garlic powder</li>
+        <li>4 teaspoons onion flakes</li>
+    </ul>
+
+    <h2>Directions</h2>
+
+    <h3>Step 1</h3>
+
+    <p>Preheat the oven to 375 degrees F (190 degrees C).</p>
+
+    <h3>Step 2</h3>
+
+    <p>Place chicken thighs in a baking dish; season both sides with garlic powder and onion flakes.</p>
+
+    <h3>Step 3</h3>
+
+    <p>Bake in the preheated oven until no longer pink at the bone and juices run clear, about 30 minutes. An instant-read thermometer inserted into thickest part of thigh, near the bone, should read 165 degrees F (74 degrees C).</p>
+
+
+
+
 </body>
 </html>
