Finish buttered noodels recipe and link it to the index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <h1> Odin Recipes </h1>
 
-    <a href="recipes/Baked_Chicken_Thighs.html">Baked Chicken Thighs</a>
+    <ol>
+    <li><a href="recipes/Baked_Chicken_Thighs.html">Baked Chicken Thighs</a></li>
+    <li><a href="recipes/buttered_Noodles.html">Buttered Noodles</a></li>
+    </ol>
+
     
 </body>
 </html>
