add pictures to the recipes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <ol>
     <li><a href="recipes/Baked_Chicken_Thighs.html">Baked Chicken Thighs</a></li>
     <li><a href="recipes/buttered_Noodles.html">Buttered Noodles</a></li>
+    <li><a href="recipes/wrapped_pork.html">Wrapped Pork</a></li>
+    <li><a href="recipes/torta_caprese.html">Torta Caprese</a></li>
     </ol>
 
     
