Add picture to the index ; add css file to the other recipes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1> Odin Recipes </h1>
 
+    <img src="images/chef.gif" alt="Chef" class="center">
+
     <ol>
     <li><a href="recipes/Baked_Chicken_Thighs.html">Baked Chicken Thighs</a></li>
     <li><a href="recipes/buttered_Noodles.html">Buttered Noodles</a></li>
